--- a/.babelrc
+++ b/.babelrc
@@ -4,7 +4,8 @@
       "targets": {
         "node": "6"
       }
-    }]
+    }],
+    "@babel/preset-react"
   ],
   "plugins": [
     ["@babel/plugin-proposal-object-rest-spread", {
