--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "symfony/dotenv": "^6.4 || ^7.1",
         "symfony/flex": "^2.4",
         "symfony/runtime": "^6.4 || ^7.1",
-        "symfony/sendgrid-mailer": "^7.1"
+        "symfony/sendgrid-mailer": "^7.1",
+        "symfony/ux-react": "^2.22"
     },
     "require-dev": {
         "behat/behat": "^3.14",
