--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "@symfony/ux-live-component": "file:vendor/symfony/ux-live-component/assets"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.26.3",
     "@hotwired/stimulus": "^3.0.0",
     "@symfony/stimulus-bridge": "^3.2.0",
+    "@symfony/ux-react": "file:vendor/symfony/ux-react/assets",
     "@symfony/webpack-encore": "^5.0.1",
+    "react": "^18.0",
+    "react-dom": "^18.0",
     "tom-select": "^2.2.2"
   }
 }
